Fri Jul 24 13:56:40 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:

          Reverted svn revision 2286:
          Thu Jul 23 19:47:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>
          because it causes crashes (removing from a container while iterating
          over it).  The issue this commit was trying to fix will have to be
          resolved after the 1.3 release.

        * bin/dcps_tests.lst:

          Commenting-out Instance for now.

Thu Jul 23 22:05:39 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          get_handle_instance() can return null, check it.

Thu Jul 23 19:47:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/InstanceState.h:
        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.cpp:

          Fixed broken state management for disposed writers.

Thu Jul 23 17:07:10 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Instance/main.cpp:

          Updates to Instance test (adjusted wait delay for samples);
          improved condition for detecting removed instances.

Thu Jul 23 14:19:02 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:

          Added new Instance test to nightly tests.

Wed Jul 22 22:16:34 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/BuiltInTopic/common.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/DCPS/Priority/publisher_main.cpp:
        * tests/DCPS/Priority/subscriber_main.cpp:
        * tests/DCPS/Thrasher/DataReaderListenerImpl.h:
        * tests/DCPS/Thrasher/ProgressIndicator.cpp:

          Changed the order of some includes to be compatible with
          Windows Mobile 6 release mode build.

        * tests/DCPS/Thrasher/Thrasher.mpc:

          Renamed the projects to something more specific.
