@@ -1,3 +1,15 @@
+Fri Jul 24 19:23:56 UTC 2009  Adam Mitz  <mitza@ociweb.com>
+
+        * DDS_release_notes.txt:
+        * dds/DCPS/InstanceState.h:
+        * dds/DCPS/InstanceState.inl:
+        * dds/DCPS/InstanceState.cpp:
+
+          Reverted svn revision 2279:
+          Wed Jul 22 21:28:10 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+          because it doesn't work when the DataReaderImpl still contains
+          samples when it is being deleted.
+
 Fri Jul 24 13:56:40 UTC 2009  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/InstanceState.h:
